--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://t.me/tma_jetton_processing_bot/tma_jetton_processing",
+  "url": "https://t.me/MyQuil_bot/upaydemo",
   "name": "TMA jetton payments demo",
-  "iconUrl": "https://media.tenor.com/eDBZxaIJl04AAAAM/fgty.gif"
+  "iconUrl": "https://img.alicdn.com/imgextra/i4/26804427/O1CN012uRd1r1iZcNg8l3YW_!!26804427.jpg"
 }
